@@ -288,7 +288,7 @@ sub chm_toc_body($)
              $text .= $element->{'number'} . " ";
              
         }
-        $text .= to_utf8($element->{'texi'});
+        $text .= &$protect_text(to_utf8($element->{'texi'}));
         $text =~ s/^\s*//;
         push (@hhc_lines, "<LI> <OBJECT type=\"text/sitemap\">\n<param name=\"Name\" value=\"$text\">\n<param name=\"Local\" value=\"$element->{'file'}#$element->{'id'}\">\n</OBJECT> </LI>\n");
         if (!$chm_files{$element->{'file'}})
@@ -322,7 +322,7 @@ sub chm_index_summary_file_entry ($$$$$$$$)
     my $element_href = shift;
     my $element_text = shift;
     my $is_printed = shift;
-    $entry = to_utf8($texi_entry);
+    $entry = &$protect_text(to_utf8($texi_entry));
     print IDXFILE "<LI> <OBJECT type=\"text/sitemap\">\n<param name=\"Name\" value=\"$entry\">\n<param name=\"Local\" value=\"$origin_href\">\n</OBJECT> </LI>\n";
 }
 
