@@ -1,3 +1,9 @@
+2005-03-29  Patrice Dumas  <dumas@centre-cired.fr>
+
+	* examples/chm.init: Protect attributes on generated HHC and HHK.
+	patch from jrfonseca (Jose Fonseca). Issue #12.
+	* texi2html.pl: @CONF_DIRS is global.
+
 2005-03-21  Patrice Dumas  <dumas@centre-cired.fr>
 
 	* texi2html.init,texi2html.pl: new option --conf-dir to specify
